[package]
name = "rlox"
version = "0.1.0"
edition = "2024"
description = "A lox interpreter written in Rust."
authors = ["Jaffrez <Jaffrez@outlook.com>"]
repository = "https://github.com/Jaffrez/rlox"

[dependencies]
anyhow = "1.0.99"
clap = "4.5.45"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.14"
